# CFGEditorPlusPlus

./: .gitignore  CFGEditorPlusPlus.desktop  CFGEditorPlusPlus_en_US.ts  CMakeLists.txt  README.md  VioletEgg.rc  VioletEgg.res  appveyor.yml  build_appimage.sh  build_qt_static.sh  build_script.bat  build_script.ps1  cfgeditor.cpp  cfgeditor.h  cfgeditor.ui  clipboardtile.cpp  clipboardtile.h  collectiondatamodel.cpp  collectiondatamodel.h  eightbyeightview.cpp  eightbyeightview.h  eightbyeightviewcontainer.cpp  eightbyeightviewcontainer.h  jsonsprite.cpp  jsonsprite.h  main.cpp  map16graphicsview.cpp  map16graphicsview.h  map16provider.cpp  map16provider.h  palettecontainer.cpp  palettecontainer.h  palettes.qrc  paletteview.cpp  paletteview.h  resources.qrc  snesgfxconverter.cpp  snesgfxconverter.h  spritedatamodel.cpp  spritedatamodel.h  (+6 more)
.github/workflows/: cmake.yml
Resources/: spriteMapData.map16
packaging/windows/: CFGEditorInstaller.csproj  Program.cs
packaging/windows/Properties/: Resources.Designer.cs  Resources.resx
